--- a/naive-bayes.ipynb
+++ b/naive-bayes.ipynb
@@ -2,53 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Naive - Bayes Algorithm"
+    "from sklearn import naive_bayes\n",
+    "from sklearn import datasets\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "First 5 rows of data is -\n",
+      "\n",
       "     0    1    2    3\n",
       "0  5.1  3.5  1.4  0.2\n",
       "1  4.9  3.0  1.4  0.2\n",
       "2  4.7  3.2  1.3  0.2\n",
       "3  4.6  3.1  1.5  0.2\n",
       "4  5.0  3.6  1.4  0.2\n",
-      "Accuracy score is : \n",
-      "0.9444444444444444\n"
+      "Accuracy score is - \n",
+      "\n",
+      "0.9555555555555556\n"
      ]
     }
    ],
    "source": [
-    "# from sklearn.model_selection import train_test_split\n",
-    "# from sklearn.naive_bayes import GaussianNB\n",
-    "# from sklearn.metrics import accuracy_score\n",
-    "from sklearn import *\n",
+    "data = datasets.load_iris()\n",
+    "x = data.data\n",
+    "y = data.target\n",
+    "df = pd.DataFrame(x)\n",
     "\n",
-    "import pandas as pd\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.6)\n",
+    "classifier = GaussianNB().fit(x_train,y_train)\n",
     "\n",
-    "iris = datasets.load_iris()\n",
-    "df = pd.DataFrame(iris.data)\n",
-    "x = iris.data\n",
-    "y = iris.target\n",
+    "predict = classifier.predict(x_test)\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.6)\n",
-    "\n",
-    "classifier = GaussianNB().fit(x_train, y_train)\n",
+    "print(\"First 5 rows of data is -\\n\")\n",
     "print(df.head())\n",
-    "print(\"Accuracy score is : \")\n",
-    "\n",
-    "print(accuracy_score(classifier.predict(x_test), y_test))"
+    "acc_sc = accuracy_score(y_test,predict)\n",
+    "print(\"Accuracy score is - \\n\")\n",
+    "print(acc_sc)"
    ]
   },
   {
